# vite-fastapi-starter

./: LICENSE  README.md  compose.yaml
client/: Dockerfile  eslint.config.js  package-lock.json  package.json
client/src/: App.tsx  main.tsx
client/src/api/: auth.ts  todo.ts
client/src/components/: Button.tsx  InputField.tsx  TodoInput.tsx  TodoItem.tsx
client/src/config/: api.ts
client/src/hooks/: useAuth.ts  useTodos.ts
client/src/pages/: HeroPage.tsx  LoginPage.tsx  NotFoundPage.tsx  SignupPage.tsx  TodoPage.tsx
client/src/routes/: ProtectedRoute.tsx
client/src/types/: auth.d.ts  todo.d.ts
client/src/utils/: headers.ts  http.ts  localStorage.ts
server/: .pre-commit-config.yaml  Dockerfile  entrypoint.sh  pyproject.toml  pyrightconfig.json
server/alembic/: env.py
server/alembic/versions/: 127e3dd51573_added_todos_table.py  9f27c1c59aad_create_todos_table.py
server/src/todo/: __init__.py  alembic.ini  main.py  models.py  schemas.py  session.py  settings.py
server/src/todo/alembic/: env.py
server/src/todo/alembic/versions/: 127e3dd51573_added_todos_table.py  127e3dd51573_adds_todos_table.py  6f79903f624b_added_user_and_todo_tables.py  6ffb1f454a4a_added_user_and_todo_tables.py  9f27c1c59aad_initial_commit.py
server/src/todo/api/: __init__.py
server/src/todo/api/v1/: __init__.py  router.py  schemas.py  service.py
server/src/todo/api/v1/routes/: __init__.py  auth.py  todo.py  todos.py
server/src/todo/api/v1/schemas/: __init__.py  auth.py  todo.py
server/src/todo/api/v1/services/: __init__.py  auth.py  todo.py
server/src/todo/core/: __init__.py  auth.py  config.py  logging.py
server/src/todo/db/: __init__.py  base.py  models_registry.py  session.py
server/src/todo/db/models/: __init__.py  todo.py  user.py
server/tests/: conftest.py
server/tests/api/v1/: test_auth.py  test_todos.py
