[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "example"
version = "0.1.0"
description = "Full-stack template with FastAPI, React (Vite + TS + Tailwind), PostgreSQL, and SQLAlchemy."
readme = "../README.md"
requires-python = ">=3.13"
authors = [
    {name = "Paul Fischer", email = "paulfischerdev@gmail.com"}
]
maintainers = [
  {name = "Paul Fischer", email = "paulfischerdev@gmail.com"}
]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["react", "python", "template", "sqlalchemy", "typescript"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[standard]>=0.116.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.3.0",
    "pyright[nodejs]>=1.1.405",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.0",
]

[project.urls]
Documentation = "https://github.com/pfischer1687/vite-fastapi-starter/README.md"
Repository = "https://github.com/pfischer1687/vite-fastapi-starter"
Issues = "https://github.com/pfischer1687/vite-fastapi-starter/issues"

[project.scripts]
example = "example.main:app"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
target-version = 'py313'

[tool.ruff.lint]
extend-select = [
  "A",
  "B",
  "D",
  "I",
  "ISC",
  "RUF",
  "T",
  "UP",
  "Q"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
