[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "todo"
version = "0.1.0"
description = "Full-stack to-do app template with FastAPI, React (Vite + TS + Tailwind), PostgreSQL, and SQLAlchemy."
readme = "../README.md"
requires-python = ">=3.13"
authors = [
    {name = "Paul Fischer", email = "paulfischerdev@gmail.com"}
]
maintainers = [
  {name = "Paul Fischer", email = "paulfischerdev@gmail.com"}
]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["react", "python", "template", "sqlalchemy", "typescript"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.116.2",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pyright[nodejs]>=1.1.405",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]

[project.urls]
Documentation = "https://github.com/pfischer1687/vite-fastapi-starter/README.md"
Repository = "https://github.com/pfischer1687/vite-fastapi-starter"
Issues = "https://github.com/pfischer1687/vite-fastapi-starter/issues"

[tool.ruff]
line-length = 120
target-version = 'py313'
exclude = [
  "src/todo/alembic"
]

[tool.ruff.lint]
extend-select = [
  "A",
  "B",
  "D",
  "I",
  "ISC",
  "RUF",
  "T",
  "UP",
  "Q"
]
ignore = ["B008", "D105"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"src/todo/db/models_registry.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
